# formulaic

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  index.html  latest  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  versions.json
.github/workflows/: publish.yml  publish_docs.yml  tests.yml  tox.yml
advanced/intro/: index.html
basic/formulas/: index.html
basic/grammar/: index.html
basic/intro/: index.html
basic/quickstart/: index.html
benchmarks/: README.md  benchmark.py  benchmarks.csv  plot.py  requirements.txt
changelog/: index.html
dev/: 404.html  index.html
dev/changelog/: index.html
dev/dev/: index.html
dev/dev/extensions/: index.html
dev/dev/integration/: index.html
dev/extensions/: index.html
dev/formulas/: index.html
dev/guides/: index.html
dev/guides/contrasts/: index.html
dev/guides/formulae/: index.html
dev/guides/grammar/: index.html
dev/guides/integration/: index.html
dev/guides/missing_data/: index.html
dev/guides/model_specs/: index.html
dev/guides/quickstart/: index.html
dev/guides/splines/: index.html
dev/guides/transforms/: index.html
dev/installation/: index.html
dev/integration/: index.html
dev/migration/: index.html
dev/search/: search_index.json
docs/: changelog.md  index.md  installation.md
docs/basic/: formulas.md  grammar.md  intro.md  quickstart.md
docs/concepts/: grammar.md  index.md
docs/guides/: quickstart.md
docsite/: mkdocs.yml  requirements.in  requirements.txt
docsite/docs/: changelog.md  formulas.md  index.md  installation.md  migration.md
docsite/docs/assets/: styles.css
docsite/docs/concepts/: formulas.md  grammar.md
docsite/docs/dev/: extensions.md  index.md  integration.md  recommendations.md
docsite/docs/guides/: contrasts.ipynb  formulae.ipynb  grammar.md  index.md  integration.ipynb  missing_data.ipynb  model_specs.ipynb  model_specs.md  quickstart.ipynb  sklearn.md  splines.ipynb  transforms.ipynb
docsite/overrides/: base.html
docsite/overrides/partials/: main.html
formulaic/: __init__.py  _version.py  errors.py  formula.py  model_matrix.py  model_spec.py  sugar.py
formulaic/materializers/: __init__.py  _transforms.py  _types.py  arrow.py  base.py  narwhals.py  pandas.py
formulaic/materializers/transforms/: __init__.py  basis_spline.py  basis_splines.py  center.py  encode_categorical.py  scale.py
formulaic/materializers/types/: __init__.py  enums.py  evaluated_factor.py  factor_values.py  formula_materializer.py  scoped_factor.py  scoped_term.py
formulaic/parser/: __init__.py  parser.py  utils.py
formulaic/parser/algos/: __init__.py  infix_to_ast.py  sanitize_tokens.py  tokenize.py  tokens_to_ast.py
formulaic/parser/types/: __init__.py  ast_node.py  factor.py  formula_parser.py  operator.py  operator_resolver.py  ordered_set.py  structured.py  term.py  token.py
formulaic/transforms/: __init__.py  basis_spline.py  contrasts.py  cubic_spline.py  encode_categorical.py  featurehash.py  hashed.py  identity.py  interactions.py  lag.py  patsy_compat.py  poly.py  scale.py
formulaic/utils/: calculus.py  cast.py  code.py  constraints.py  context.py  deprecations.py  iterators.py  layered_mapping.py  null_handling.py  ordered_set.py  sentinels.py  sparse.py  stateful_transforms.py  structured.py  variables.py
formulas/: index.html
guides/: index.html
guides/contrasts/: index.html
guides/formulae/: index.html
guides/grammar/: index.html
guides/integration/: index.html
guides/missing_data/: index.html
guides/model_specs/: index.html
guides/quickstart/: index.html
guides/splines/: index.html
guides/transforms/: index.html
installation/: index.html
migration/: index.html
reference/api/: index.html
search/: search_index.json
tests/: test_formula.py  test_model_matrix.py  test_model_spec.py  test_sugar.py
tests/materializers/: test__transforms.py  test_arrow.py  test_base.py  test_equivalence.py  test_narwhals.py  test_pandas.py  test_polars.py
tests/materializers/transforms/: test_basis_spline.py  test_basis_splines.py  test_center.py  test_encode_categorical.py  test_identity.py  test_scale.py
tests/materializers/types/: test_evaluated_factor.py  test_factor_values.py  test_formula_materializer.py  test_scoped_factor.py  test_scoped_term.py
tests/parser/: test_parser.py  test_utils.py
tests/parser/algos/: test_infix_to_ast.py  test_tokenize.py  test_tokens_to_ast.py
tests/parser/types/: test_ast_node.py  test_factor.py  test_formula_parser.py  test_operator.py  test_operator_resolver.py  test_ordered_set.py  test_structured.py  test_term.py  test_token.py
tests/transforms/: test_basis_spline.py  test_contrasts.py  test_cubic_spline.py  test_encode_categorical.py  test_featurehash.py  test_hashed.py  test_identity.py  test_lag.py  test_patsy_compat.py  test_poly.py  test_scale.py
tests/transforms/data/: cubic_spline_r_test_x.json  cublic_spine_r_test_data.json  cublic_spine_r_test_data.txt
tests/utils/: test_calculus.py  test_capture_context.py  test_cast.py  test_constraints.py  test_iterators.py  test_layered_mapping.py  test_null_handling.py  test_ordered_set.py  test_sentinels.py  test_sparse.py  test_stateful_transforms.py  test_variables.py
v1.0.x/: 404.html  index.html
v1.0.x/changelog/: index.html
v1.0.x/dev/: index.html
v1.0.x/dev/extensions/: index.html
v1.0.x/dev/integration/: index.html
v1.0.x/formulas/: index.html
v1.0.x/guides/: index.html
v1.0.x/guides/contrasts/: index.html
v1.0.x/guides/formulae/: index.html
v1.0.x/guides/grammar/: index.html
v1.0.x/guides/integration/: index.html
v1.0.x/guides/model_specs/: index.html
v1.0.x/guides/quickstart/: index.html
v1.0.x/guides/splines/: index.html
v1.0.x/guides/transforms/: index.html
v1.0.x/installation/: index.html
v1.0.x/migration/: index.html
v1.1.0/guides/contrasts/: index.html
v1.1.x/: 404.html  index.html
v1.1.x/formulas/: index.html
v1.1.x/guides/: index.html
v1.1.x/migration/: index.html
v1.2.x/assets/: styles.css
v1.2.x/installation/: index.html
(+14 files in other folders)
